tests/fixtures/errors/release_locked.z
# E0200: a variable with a held lock cannot be released (and is access-locked).
thing: class { v: i64 }
main: function is {
    c: thing v: 1
    with b: c.borrow do {
        c.release
    }
}
